# pypolypart

./: .gitignore  CMakeLists.txt  README.md  demo.py  pyproject.toml
src/: bindings.cpp
src/pypolypart/: __init__.py
